--- a/index.html
+++ b/index.html
@@ -11,15 +11,35 @@
     <title>МИР «AVON» РОССИЯ</title>
     <style>@font-face {
   font-family: 'Helvetika';
-  src: url('../fonts/Helvetika.eot');
-  src: url('../fonts/Helvetika.woff2') format('woff2'), url('../fonts/Helvetika.woff') format('woff'), url('../fonts/Helvetika.ttf') format('truetype'), url('../fonts/Helvetika.svg#Helvetika') format('svg'), url('../fonts/Helvetika.eot?#iefix') format('embedded-opentype');
+  src: url('/assets/templates/projectsoft/fonts/Helvetika.eot');
+  src: url('/assets/templates/projectsoft/fonts/Helvetika.woff2') format('woff2'), url('/assets/templates/projectsoft/fonts/Helvetika.woff') format('woff'), url('/assets/templates/projectsoft/fonts/Helvetika.ttf') format('truetype'), url('/assets/templates/projectsoft/fonts/Helvetika.svg#Helvetika') format('svg'), url('/assets/templates/projectsoft/fonts/Helvetika.eot?#iefix') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
+  font-family: 'AGAvantGardeCyr';
+  src: url('/assets/templates/projectsoft/fonts/AGAvantGardeCyr.eot');
+  src: url('/assets/templates/projectsoft/fonts/AGAvantGardeCyr.eot') format('embedded-opentype'), url('/assets/templates/projectsoft/fonts/AGAvantGardeCyr.woff2') format('woff2'), url('/assets/templates/projectsoft/fonts/AGAvantGardeCyr.woff') format('woff'), url('/assets/templates/projectsoft/fonts/AGAvantGardeCyr.ttf') format('truetype'), url('/assets/templates/projectsoft/fonts/AGAvantGardeCyr.svg#AGAvantGardeCyr') format('svg');
+}
+@font-face {
+  font-family: 'AGOptimaCyr';
+  src: url('/assets/templates/projectsoft/fonts/AGOptimaCyr.eot');
+  src: url('/assets/templates/projectsoft/fonts/AGOptimaCyr.eot') format('embedded-opentype'), url('/assets/templates/projectsoft/fonts/AGOptimaCyr.woff2') format('woff2'), url('/assets/templates/projectsoft/fonts/AGOptimaCyr.woff') format('woff'), url('/assets/templates/projectsoft/fonts/AGOptimaCyr.ttf') format('truetype'), url('/assets/templates/projectsoft/fonts/AGOptimaCyr.svg#AGOptimaCyr') format('svg');
+}
+@font-face {
+  font-family: 'AmbassadoreType';
+  src: url('/assets/templates/projectsoft/fonts/AmbassadoreType.eot');
+  src: url('/assets/templates/projectsoft/fonts/AmbassadoreType.eot') format('embedded-opentype'), url('/assets/templates/projectsoft/fonts/AmbassadoreType.woff2') format('woff2'), url('/assets/templates/projectsoft/fonts/AmbassadoreType.woff') format('woff'), url('/assets/templates/projectsoft/fonts/AmbassadoreType.ttf') format('truetype'), url('/assets/templates/projectsoft/fonts/AmbassadoreType.svg#AmbassadoreType') format('svg');
+}
+@font-face {
+  font-family: 'AGNewHandbook';
+  src: url('/assets/templates/projectsoft/fonts/AGNewHandbook.eot');
+  src: url('/assets/templates/projectsoft/fonts/AGNewHandbook.eot') format('embedded-opentype'), url('/assets/templates/projectsoft/fonts/AGNewHandbook.woff2') format('woff2'), url('/assets/templates/projectsoft/fonts/AGNewHandbook.woff') format('woff'), url('/assets/templates/projectsoft/fonts/AGNewHandbook.ttf') format('truetype'), url('/assets/templates/projectsoft/fonts/AGNewHandbook.svg#AGNewHandbook') format('svg');
+}
+@font-face {
   font-family: 'AvonWorldRussia';
-  src: url('../fonts/AvonWorldRussia.eot?f0fok2');
-  src: url('../fonts/AvonWorldRussia.eot?f0fok2#iefix') format('embedded-opentype'), url('../fonts/AvonWorldRussia.ttf?f0fok2') format('truetype'), url('../fonts/AvonWorldRussia.woff?f0fok2') format('woff'), url('../fonts/AvonWorldRussia.svg?f0fok2#AvonWorldRussia') format('svg');
+  src: url('/assets/templates/projectsoft/fonts/AvonWorldRussia.eot?f0fok2');
+  src: url('/assets/templates/projectsoft/fonts/AvonWorldRussia.eot?f0fok2#iefix') format('embedded-opentype'), url('/assets/templates/projectsoft/fonts/AvonWorldRussia.ttf?f0fok2') format('truetype'), url('/assets/templates/projectsoft/fonts/AvonWorldRussia.woff?f0fok2') format('woff'), url('/assets/templates/projectsoft/fonts/AvonWorldRussia.svg?f0fok2#AvonWorldRussia') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -58,8 +78,8 @@
 }
 @font-face {
   font-family: 'AvonBusinesSite';
-  src: url('../fonts/AvonBusinesSite.eot?z3o3dl');
-  src: url('../fonts/AvonBusinesSite.eot?z3o3dl#iefix') format('embedded-opentype'), url('../fonts/AvonBusinesSite.ttf?z3o3dl') format('truetype'), url('../fonts/AvonBusinesSite.woff?z3o3dl') format('woff'), url('../fonts/AvonBusinesSite.svg?z3o3dl#AvonBusinesSite') format('svg');
+  src: url('/assets/templates/projectsoft/fonts/AvonBusinesSite.eot?z3o3dl');
+  src: url('/assets/templates/projectsoft/fonts/AvonBusinesSite.eot?z3o3dl#iefix') format('embedded-opentype'), url('/assets/templates/projectsoft/fonts/AvonBusinesSite.ttf?z3o3dl') format('truetype'), url('/assets/templates/projectsoft/fonts/AvonBusinesSite.woff?z3o3dl') format('woff'), url('/assets/templates/projectsoft/fonts/AvonBusinesSite.svg?z3o3dl#AvonBusinesSite') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -172,47 +192,47 @@
 }
 @font-face {
   font-family: 'Cuprum-Regular';
-  src: url('../fonts/Cuprum-Regular.woff') format('woff'), url('../fonts/Cuprum-Regular.ttf') format('truetype'), url('../fonts/Cuprum-Regular.svg#Cuprum-Regular') format('svg');
+  src: url('/assets/templates/projectsoft/fonts/Cuprum-Regular.woff') format('woff'), url('/assets/templates/projectsoft/fonts/Cuprum-Regular.ttf') format('truetype'), url('/assets/templates/projectsoft/fonts/Cuprum-Regular.svg#Cuprum-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'cuprum';
-  src: url('../fonts/cuprum.eot');
-  src: url('../fonts/cuprum.woff2') format('woff2'), url('../fonts/cuprum.eot?#iefix') format('embedded-opentype');
+  src: url('/assets/templates/projectsoft/fonts/cuprum.eot');
+  src: url('/assets/templates/projectsoft/fonts/cuprum.woff2') format('woff2'), url('/assets/templates/projectsoft/fonts/cuprum.eot?#iefix') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'Cuprum-Bold';
-  src: url('../fonts/Cuprum-Bold.woff') format('woff'), url('../fonts/Cuprum-Bold.ttf') format('truetype'), url('../fonts/Cuprum-Bold.svg#Cuprum-Bold') format('svg');
+  src: url('/assets/templates/projectsoft/fonts/Cuprum-Bold.woff') format('woff'), url('/assets/templates/projectsoft/fonts/Cuprum-Bold.ttf') format('truetype'), url('/assets/templates/projectsoft/fonts/Cuprum-Bold.svg#Cuprum-Bold') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'cuprumbold';
-  src: url('../fonts/cuprumbold.eot');
-  src: url('../fonts/cuprumbold.woff2') format('woff2'), url('../fonts/cuprumbold.eot?#iefix') format('embedded-opentype');
+  src: url('/assets/templates/projectsoft/fonts/cuprumbold.eot');
+  src: url('/assets/templates/projectsoft/fonts/cuprumbold.woff2') format('woff2'), url('/assets/templates/projectsoft/fonts/cuprumbold.eot?#iefix') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'Cuprum-Italic';
-  src: url('../fonts/Cuprum-Italic.woff') format('woff'), url('../fonts/Cuprum-Italic.ttf') format('truetype'), url('../fonts/Cuprum-Italic.svg#Cuprum-Italic') format('svg');
+  src: url('/assets/templates/projectsoft/fonts/Cuprum-Italic.woff') format('woff'), url('/assets/templates/projectsoft/fonts/Cuprum-Italic.ttf') format('truetype'), url('/assets/templates/projectsoft/fonts/Cuprum-Italic.svg#Cuprum-Italic') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'cuprumitalic';
-  src: url('../fonts/cuprumitalic.eot');
-  src: url('../fonts/cuprumitalic.woff2') format('woff2'), url('../fonts/cuprumitalic.eot?#iefix') format('embedded-opentype');
+  src: url('/assets/templates/projectsoft/fonts/cuprumitalic.eot');
+  src: url('/assets/templates/projectsoft/fonts/cuprumitalic.woff2') format('woff2'), url('/assets/templates/projectsoft/fonts/cuprumitalic.eot?#iefix') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'SocPs';
-  src: url('../fonts/SocPs.eot?7gzd63');
-  src: url('../fonts/SocPs.eot?7gzd63#iefix') format('embedded-opentype'), url('../fonts/SocPs.ttf?7gzd63') format('truetype'), url('../fonts/SocPs.woff?7gzd63') format('woff'), url('../fonts/SocPs.svg?7gzd63#SocPs') format('svg');
+  src: url('/assets/templates/projectsoft/fonts/SocPs.eot?7gzd63');
+  src: url('/assets/templates/projectsoft/fonts/SocPs.eot?7gzd63#iefix') format('embedded-opentype'), url('/assets/templates/projectsoft/fonts/SocPs.ttf?7gzd63') format('truetype'), url('/assets/templates/projectsoft/fonts/SocPs.woff?7gzd63') format('woff'), url('/assets/templates/projectsoft/fonts/SocPs.svg?7gzd63#SocPs') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -467,19 +487,20 @@
 (function(a,b,c){function C(a){return!a||a=="loaded"||a=="complete"||a=="uninitialized"}function D(a,c,d,g,h,j){var l=b.createElement("script"),m;g=g||B.errorTimeout,l.src=a;for(i in d)l.setAttribute(i,d[i]);c=j?F:c||k,l.onreadystatechange=l.onload=function(){!m&&C(l.readyState)&&(m=1,c(),l.onload=l.onreadystatechange=null)},e(function(){m||(m=1,c(1))},g),h?l.onload():f.parentNode.insertBefore(l,f)}function E(a,c,d,g,h,i){var j=b.createElement("link"),l,m;g=g||B.errorTimeout,c=i?F:c||k,j.href=a,j.rel="stylesheet",j.type="text/css";for(m in d)j.setAttribute(m,d[m]);h||(f.parentNode.insertBefore(j,f),e(c,0))}function F(){var a=h.shift();j=1,a?a.t?e(function(){(a.t=="c"?B.injectCss:B.injectJs)(a.s,0,a.a,a.x,a.e,1)},0):(a(),F()):j=0}function G(a,c,d,g,i,k,l){function s(b){if(!p&&C(o.readyState)){r.r=p=1,!j&&F(),o.onload=o.onreadystatechange=null;if(b){a=="object"&&e(function(){n.removeChild(o)},50);for(var d in y[c])y[c].hasOwnProperty(d)&&y[c][d].onload()}}}l=l||B.errorTimeout;var o={},p=0,q=0,r={t:d,s:c,e:i,a:k,x:l};y[c]===1&&(q=1,y[c]=[],o=b.createElement(a)),o.src=o.data=c,o.width=o.height="0",o.onerror=o.onload=o.onreadystatechange=function(){s.call(this,q)},h.splice(g,0,r),a=="object"&&(q||y[c]===2?(n.insertBefore(o,m?null:f),e(s,l)):y[c].push(o))}function H(a,b,c,d,e){return j=0,b=b||"j",v(a)?G(b=="c"?s:r,a,b,this.i++,c,d,e):(h.splice(this.i++,0,a),h.length==1&&F()),this}function I(){var a=B;return a.loader={load:H,i:0},a}var d=b.documentElement,e=a.setTimeout,f=b.getElementsByTagName("script")[0],g={}.toString,h=[],j=0,k=function(){},l="MozAppearance"in d.style,m=l&&!!b.createRange().compareNode,n=m?d:f.parentNode,o=a.opera&&g.call(a.opera)=="[object Opera]",p=!!b.attachEvent,q="webkitAppearance"in d.style,r=l?"object":"img",s=p?"script":r,t=Array.isArray||function(a){return g.call(a)=="[object Array]"},u=function(a){return Object(a)===a},v=function(a){return typeof a=="string"},w=function(a){return g.call(a)=="[object Function]"},x=[],y={},z={timeout:function(a,b){return b.length&&(a.timeout=b[0]),a}},A,B;B=function(a){function f(a){var b=a.split("!"),c=x.length,d=b.pop(),e=b.length,f={url:d,origUrl:d,prefixes:b},g,h,i;for(h=0;h<e;h++)i=b[h].split("="),g=z[i.shift()],g&&(f=g(f,i));for(h=0;h<c;h++)f=x[h](f);return f}function g(a){return a.split(".").pop().split("?").shift()}function h(a,b,d,e,h){var i=f(a),j=i.autoCallback,k=g(i.url);if(i.bypass)return;b&&(b=w(b)?b:b[a]||b[e]||b[a.split("/").pop().split("?")[0]]||F);if(i.instead)return i.instead(a,b,d,e,h);y[i.url]?i.noexec=!0:y[i.url]=1,d.load(i.url,i.forceCSS||!i.forceJS&&"css"==g(i.url)?"c":c,i.noexec,i.attrs,i.timeout),(w(b)||w(j))&&d.load(function(){I(),b&&b(i.origUrl,h,e),j&&j(i.origUrl,h,e),y[i.url]=2})}function i(a,b){function m(a,d){if(!a)!d&&i();else if(v(a))d||(f=function(){var a=[].slice.call(arguments);g.apply(this,a),i()}),h(a,f,b,0,c);else if(u(a)){j=function(){var b=0,c;for(c in a)a.hasOwnProperty(c)&&b++;return b}();for(l in a)a.hasOwnProperty(l)&&(!d&&!--j&&(w(f)?f=function(){var a=[].slice.call(arguments);g.apply(this,a),i()}:f[l]=function(a){return function(){var b=[].slice.call(arguments);a.apply(this,b),i()}}(g[l])),h(a[l],f,b,l,c))}}var c=!!a.test,d=c?a.yep:a.nope,e=a.load||a.both,f=a.callback||k,g=f,i=a.complete||k,j,l;m(d,!!e),e&&m(e)}var b,d,e=this.yepnope.loader;if(v(a))h(a,0,e,0);else if(t(a))for(b=0;b<a.length;b++)d=a[b],v(d)?h(d,0,e,0):t(d)?B(d):u(d)&&i(d,e);else u(a)&&i(a,e)},B.addPrefix=function(a,b){z[a]=b},B.addFilter=function(a){x.push(a)},B.errorTimeout=1e4,b.readyState==null&&b.addEventListener&&(b.readyState="loading",b.addEventListener("DOMContentLoaded",A=function(){b.removeEventListener("DOMContentLoaded",A,0),b.readyState="complete"},0)),a.yepnope=I(),a.yepnope.executeStack=F,a.yepnope.injectJs=D,a.yepnope.injectCss=E})(this,this.document);
 
     </script>
-    <script>var tmpd = "assets/templates/projectsoft",
+    <script>var tmpd = "/assets/templates/projectsoft",
 	stamp = "?v="+(new Date()).getTime();
 yepnope({
 	nope:{
 			style: tmpd + "/css/main.css"+stamp,
+			book: tmpd + "/css/book.css"+stamp,
 			app:tmpd + "/js/app.js"+stamp,
 			hypher:tmpd + "/js/hypher.js"+stamp,
-			main:tmpd + "/js/main.js"+stamp
+			main:tmpd + "/js/main.js"+stamp,
 		},
 	callback:{
 		style: function(){
-			//var body = document.getElementsByTagName("body");
-			//body[0].style.display = "initial";
+			/*var body = document.getElementsByTagName("body");
+			body[0].style.display = "initial";*/
 		},
 		app: function(){
 			$('body').removeClass("preloadpage");
@@ -487,11 +508,13 @@ yepnope({
 		main: function() {
 			yepnope({
 				test:"object" == typeof window.CatalogAvon,
-				yep:[
-					tmpd + "/css/book.css"+stamp,
-					tmpd + "/js/book.js"+stamp
-				]
+				yep:{
+					js: tmpd + "/js/book.js"+stamp
+				}
 			});
+		},
+		book: function() {
+			setTimeout(function(){$('.catalog > .container > .row').slideDown("slow");}, 500);
 		},
 		hypher: function(){
 			$('.agent-step li p, .hypher, .hypher *').hyphenate('ru');
